改进并完善项目
（1）增加连接管理页面、更名历史查询、迁户历史查询；
（2）修改项目配置代码；
（3）问题：缺失连接（字符串），无法访问数据库。

--- a/Manager.dproj
+++ b/Manager.dproj
@@ -108,12 +108,25 @@
             <Form>Form2</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="Move.pas">
+        <DCCReference Include="Edit.pas">
             <Form>Form3</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="About.pas">
             <Form>Form4</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Rename.pas">
+            <Form>Form5</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Connect.pas">
+            <Form>DataModule1</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
+        <DCCReference Include="Move.pas">
+            <Form>Form6</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
