补充并优化程序
（1）归档程序可能使用的图片；
（2）将数据库连接改为Windows认证模式；
（3）重做登陆界面，连接数据库进行身份认证；
（4）修改主界面菜单栏，增加用户注销与数据容灾选项；
（5）修改应用程序生成配置；
（6）调整窗口定位。

--- a/src/Manager.dproj
+++ b/src/Manager.dproj
@@ -95,6 +95,10 @@
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>2052</VerInfo_Locale>
+        <VerInfo_AutoGenVersion>true</VerInfo_AutoGenVersion>
+        <VerInfo_Keys>CompanyName=黄希瑞;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=2018～2019学年第2学期数据库课程设计</VerInfo_Keys>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
